Refactor transaction scope